--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@acme/auth": "workspace:*",
     "@acme/db": "workspace:*",
+    "@acme/db-zenstack": "workspace:*",
     "@acme/validators": "workspace:*",
     "@trpc/server": "catalog:",
     "superjson": "2.2.2",
