--- a/packages/db-zenstack/package.json
+++ b/packages/db-zenstack/package.json
@@ -11,7 +11,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "pnpm generate && tsc",
+    "build": "tsc",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "dev": "tsc",
     "generate": "zenstack generate",
@@ -21,6 +21,7 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
+    "@prisma/client": "^6.12.0",
     "@zenstackhq/runtime": "2.17.1",
     "@zenstackhq/trpc": "^2.17.1",
     "zod": "catalog:"
@@ -32,6 +33,7 @@
     "dotenv-cli": "^8.0.0",
     "eslint": "catalog:",
     "prettier": "catalog:",
+    "prisma": "^6.12.0",
     "typescript": "catalog:",
     "zenstack": "2.17.1"
   },
